Golden-Kubestronaut-Portfolio/02-certifications/16-cnpe/lab-starter/manifests/cnpe-platform/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-a-prod
  labels:
    tenant: team-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
---
apiVersion: v1
kind: Namespace
metadata:
  name: policy-system
